<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="med.mental.mentalmed.telas.CadastroFase1">

        <RelativeLayout
            android:id="@+id/rgenero"
            android:layout_width="0dp"
            android:layout_height="99dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".telas.MainActivity">


            <TextView
                android:id="@+id/tv_genero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="11dp"
                android:text="Gênero:"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/rg_campo_genero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_genero"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_fem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="Feminino"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rb_masc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="Masculino"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rb_lgbt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="LGBT"
                    android:textSize="16sp" />
            </RadioGroup>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rg_sexo"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rgenero"
            tools:context=".telas.MainActivity">

            <TextView
                android:id="@+id/tv_sexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="Sexo:"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/rg_campo_sexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_sexo"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/mulher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:text="@string/mulher"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/homem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:text="@string/homem"
                    android:textSize="16sp" />

            </RadioGroup>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rg_moradia"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_sexo"
            tools:context=".telas.MainActivity">

            <TextView
                android:id="@+id/tv_moradia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="Com quem você mora?"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/rg_campo_moradia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_moradia"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_familiar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="Familiares:"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rb_amigos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="Amigos"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rb_sozinho"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="Sozinho"
                    android:textSize="16sp" />

            </RadioGroup>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rg_filiacao"
            android:layout_width="0dp"
            android:layout_height="89dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_moradia"
            tools:context=".telas.MainActivity">

            <TextView
                android:id="@+id/tv_filiacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="Você tem filhos?"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/rg_campo_filiacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_filiacao"
                android:layout_alignParentStart="true"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_sim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:text="@string/sim"
                    android:textSize="16sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/nao"
                    android:textSize="16sp" />

            </RadioGroup>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rg_conjugal"
            android:layout_width="0dp"
            android:layout_height="84dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_filiacao"
            tools:context=".telas.MainActivity">

            <TextView
                android:id="@+id/tv_conjugal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/situacao_conjugal"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/rg_campo_conjugal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_conjugal"
                android:layout_alignParentStart="true"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/c_com"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:text="@string/com_companheiro"
                    android:textSize="16sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:text="@string/sem_companheiro"
                    android:textSize="16sp" />

            </RadioGroup>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rg_trabalho"
            android:layout_width="0dp"
            android:layout_height="95dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_conjugal"
            tools:context=".telas.MainActivity">

            <TextView
                android:id="@+id/tv_trabalho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Além de estudar, trabalha?"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/rg_campo_trab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_trabalho"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_tsim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/sim"
                    android:textSize="16sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/nao"
                    android:textSize="16sp" />

            </RadioGroup>

        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rg_idade_raca"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_trabalho"
            tools:context=".telas.MainActivity">

            <TextView
                android:id="@+id/tv_idade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="Idade:"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinner_idade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/tv_idade"
                android:prompt="@string/spinneridade"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tv_idade"
                app:layout_constraintTop_toTopOf="@+id/tv_idade" />

            <TextView
                android:id="@+id/tv_raca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Raça:"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_idade" />

            <Spinner
                android:id="@+id/spinner_raca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:prompt="@string/raca"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tv_raca"
                app:layout_constraintTop_toTopOf="@+id/tv_raca" />

            <TextView
                android:id="@+id/tv_renda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Qual a renda da sua família em salários mínimos:"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_raca" />

            <EditText
                android:id="@+id/et_renda"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:dropDownWidth="match_parent"
                android:hint="Ex.: 2500,00"
                android:inputType="none|numberDecimal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_renda" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.35" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:id="@+id/rg_religiao"
            android:layout_width="0dp"
            android:layout_height="95dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_idade_raca"
            tools:context=".telas.MainActivity">

            <TextView
                android:id="@+id/tv_religiao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Segue algum tipo de religião?"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/rg_campo_religiao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_religiao"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_religao_sim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/sim"
                    android:textSize="16sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/nao"
                    android:textSize="16sp" />

            </RadioGroup>

        </RelativeLayout>

        <Button
            android:id="@+id/bt_proximo_fases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/proximo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_religiao" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>